# haskell-src-meta

./: .gitignore  .stylish-haskell.yaml  .travis.yml  ChangeLog  Makefile  README  README.md  cabal.project  haskell-src-meta.cabal  haskell-src-meta.nix  release.nix  shell.nix  stack-ghc-7_10.yaml  stack-ghc-8_6.yaml  stack-ghc-9_0.yaml  stack-ghc-9_2.yaml  stack.yaml  stack_ghc9.yaml
.github/workflows/: haskell-ci.yml
examples/: BF.hs  Here.hs  Hs.hs  HsHere.hs  SKI.hs
format/: make-stylish.sh
haskell-src-meta/: ChangeLog  README.md  Setup.lhs  default.nix  haskell-src-meta.cabal
haskell-src-meta/examples/: BF.hs  Hs.hs  HsHere.hs  SKI.hs
haskell-src-meta/src/Language/Haskell/: Meta.hs
haskell-src-meta/src/Language/Haskell/Meta/: Extensions.hs  Parse.hs  THCompat.hs  Utils.hs
haskell-src-meta/src/Language/Haskell/Meta/Syntax/: Translate.hs
haskell-src-meta/tests/: Main.hs  Splices.hs  TestExamples.hs
lint/: check.sh  lint-all-with.sh
lint/by-extension/hs/: stylish-haskell.sh
lint/fixed/: hs-package-derivations.sh
scripts/format/: make-stylish.sh
scripts/lint/: all.sh
scripts/lint/by-extension/hs/: stylish-haskell.sh
scripts/lint/by-extension/sh/: shellcheck.sh
scripts/lint/fixed/: hs-package-derivations.sh
src/Language/Haskell/: Meta.hs
src/Language/Haskell/Meta/: Parse.hs  Syntax.hs  Utils.hs
src/Language/Haskell/Meta/Parse/: Careful.hs
src/Language/Haskell/Meta/QQ/: ADo.hs  BF.hs  Here.hs  Hs.hs  HsHere.hs  Idiom.hs  SKI.hs
src/Language/Haskell/Meta/Syntax/: Translate.hs  Vars.hs
src/Language/Haskell/TH/: Compat.hs  Lift.hs
src/Language/Haskell/TH/Instances/: Lift.hs
tests/: Main.hs  Splices.hs  TestExamples.hs
