name:               haskell-src-meta
version:            0.7.0
cabal-version:      >= 1.6
build-type:         Simple
license:            BSD3
license-file:       LICENSE
category:           Language, Template Haskell
author:             Matt Morrow
copyright:          (c) Matt Morrow
maintainer:         Ben Millwood <haskell@benmachine.co.uk>
bug-reports:        https://github.com/bmillwood/haskell-src-meta/issues
-- That is to say, "builds with". It's not like we have a testsuite.
tested-with:        GHC == 7.6.3, GHC == 7.8.3, GHC == 7.10.3, GHC == 8.0.1
synopsis:           Parse source to template-haskell abstract syntax.
description:        The translation from haskell-src-exts abstract syntax
                    to template-haskell abstract syntax isn't 100% complete yet.

extra-source-files: ChangeLog README.md examples/*.hs

library
  build-depends:   base >= 4.5 && < 4.10,
                   haskell-src-exts >= 1.17 && < 1.19,
                   pretty >= 1.0 && < 1.2,
                   syb >= 0.1 && < 0.7,
                   template-haskell >= 2.7 && < 2.12,
                   th-orphans >= 0.9.1 && < 0.14

  extensions:      CPP,
                   RankNTypes,
                   StandaloneDeriving,
                   TemplateHaskell,
                   TypeSynonymInstances,
                   FlexibleContexts,
                   FlexibleInstances,
                   DeriveDataTypeable,
                   PatternGuards
  hs-source-dirs:  src
  exposed-modules: Language.Haskell.Meta
                   Language.Haskell.Meta.Parse
                   Language.Haskell.Meta.Parse.Careful
                   Language.Haskell.Meta.Syntax.Translate
                   Language.Haskell.TH.Instances.Lift
                   Language.Haskell.Meta.Utils

source-repository head
  type:     git
  location: git://github.com/bmillwood/haskell-src-meta.git

