name:               haskell-src-meta
version:            0.8.0.3
cabal-version:      >= 1.8
build-type:         Simple
license:            BSD3
license-file:       LICENSE
category:           Language, Template Haskell
author:             Matt Morrow
copyright:          (c) Matt Morrow
maintainer:         Ben Millwood <haskell@benmachine.co.uk>
bug-reports:        https://github.com/bmillwood/haskell-src-meta/issues
tested-with:        GHC == 7.6.3, GHC == 7.8.3, GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.1
synopsis:           Parse source to template-haskell abstract syntax.
description:        The translation from haskell-src-exts abstract syntax
                    to template-haskell abstract syntax isn't 100% complete yet.

extra-source-files: ChangeLog README.md examples/*.hs

library
  build-depends:   base >= 4.6 && < 4.12,
                   haskell-src-exts >= 1.18 && < 1.21,
                   pretty >= 1.0 && < 1.2,
                   syb >= 0.1 && < 0.8,
                   template-haskell >= 2.8 && < 2.14,
                   th-orphans >= 0.9.1 && < 0.14

  if impl(ghc < 7.8)
    build-depends: safe <= 0.3.9

  hs-source-dirs:  src
  exposed-modules: Language.Haskell.Meta
                   Language.Haskell.Meta.Parse
                   Language.Haskell.Meta.Syntax.Translate
                   Language.Haskell.Meta.Utils

test-suite unit
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          Main.hs

  build-depends:
    HUnit                >= 1.2  && < 1.7,
    base                 >= 4.5  && < 4.12,
    haskell-src-exts     >= 1.17 && < 1.21,
    haskell-src-meta,
    pretty               >= 1.0  && < 1.2,
    template-haskell     >= 2.7  && < 2.14,
    test-framework       >= 0.8  && < 0.9,
    test-framework-hunit >= 0.3  && < 0.4

test-suite splices
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          Splices.hs

  build-depends:
    base,
    haskell-src-meta

source-repository head
  type:     git
  location: git://github.com/bmillwood/haskell-src-meta.git
