name:               haskell-src-meta
version:            0.8.4
cabal-version:      >= 1.8
build-type:         Simple
license:            BSD3
license-file:       LICENSE
category:           Language, Template Haskell
author:             Matt Morrow
copyright:          (c) Matt Morrow
maintainer:         danburton.email@gmail.com
bug-reports:        https://github.com/DanBurton/haskell-src-meta/issues
tested-with:        GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.1
synopsis:           Parse source to template-haskell abstract syntax.
description:        The translation from haskell-src-exts abstract syntax
                    to template-haskell abstract syntax isn't 100% complete yet.

extra-source-files: ChangeLog README.md

library
  build-depends:   base >= 4.8 && < 5,
                   haskell-src-exts >= 1.18 && < 1.23,
                   pretty >= 1.0 && < 1.2,
                   syb >= 0.1 && < 0.8,
                   template-haskell >= 2.10 && < 2.16,
                   th-orphans >= 0.12 && < 0.14

  if impl(ghc < 7.8)
    build-depends: safe <= 0.3.9

  hs-source-dirs:  src
  exposed-modules: Language.Haskell.Meta
                   Language.Haskell.Meta.Parse
                   Language.Haskell.Meta.Syntax.Translate
                   Language.Haskell.Meta.Utils

test-suite unit
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          Main.hs

  build-depends:
    HUnit                >= 1.2,
    base                 >= 4.5,
    haskell-src-exts     >= 1.17,
    haskell-src-meta,
    pretty               >= 1.0,
    template-haskell     >= 2.10,
    tasty,
    tasty-hunit

  -- this is needed to access Control.Monad.Fail on GHCs before 8.0
  if !impl(ghc >= 8.0)
    Build-Depends:
      fail == 4.9.*


test-suite splices
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          Splices.hs

  build-depends:
    base,
    haskell-src-exts,
    haskell-src-meta,
    template-haskell

test-suite examples
  type:             exitcode-stdio-1.0
  hs-source-dirs:   examples, tests
  main-is:          TestExamples.hs

  build-depends:
    base,
    containers,
    haskell-src-meta,
    pretty,
    syb,
    template-haskell

  -- this is needed to access Control.Monad.Fail on GHCs before 8.0
  if !impl(ghc >= 8.0)
    Build-Depends:
      fail == 4.9.*


  other-modules:
    BF,
    Hs,
    HsHere,
    SKI

source-repository head
  type:     git
  location: git://github.com/danburton/haskell-src-meta.git
